# transformer-hangman-solver

./: README.md  generate_dictionaries.py  hangman.ipynb  hangman.py  pyproject.toml  requirements.txt  test.py  test_dictionary.txt  training_dictionary.txt
deepseek/: model.py
